# Messages_Streaming_Pipeline

./: .gitignore  README.md  pyproject.toml
docker/: start_docker.sh  stop_docker.sh
docker/grafana/: .env  docker-compose.yml
docker/grafana/grafana/: dashboard.yml  kafka_dashboard.json
docker/kafka/: .env  docker-compose.yml
docker/postgres/: .env  docker-compose.yml
docker/postgres/init_db/: init_campaigns.sql  init_client_first_purchase_date.sql  init_holidays.sql
docker/postgres/postgres_settings/: servers.json
docker/prometheus/: .env  docker-compose.yml
docker/prometheus/prometheus/: prometheus.yml
docker/spark/: .env  Dockerfile  docker-compose.yml  docker-readme.md  spark-base.Dockerfile  spark-master.Dockerfile  spark-worker.Dockerfile  streaming.py
kubernetes/: configmap.yaml
kubernetes/kafka/: deployment.yaml  service.yaml
kubernetes/postgres/: configmap.yaml  deployment.yaml  postgres-init-sql.yaml  service.yaml
kubernetes/postgres/init_db/: init_campaigns.sql  (+3 more)
kubernetes/spark/: config.yaml  deployment.yaml  service.yaml
kubernetes/streaming/: job.yaml
kubernetes/streaming_consumer/: job.yaml  pvc.yaml  secret.yaml  service.yaml
kubernetes/streaming_producer/: job.yaml
streaming_consumer/: .dockerignore  Dockerfile  data_consumer.py  requirements.txt
streaming_pipeline/: config.py  data_consumer.py  data_producer.py  streaming.py
streaming_producer/: .dockerignore  Dockerfile  data_producer.py  requirements.txt
terraform/: .terraform.lock.hcl  cluster.tf  iam.tf  node.tf  node_pool.tf  terraform.tfstate  variables.tf
