[tool.poetry]
name = "spark-side-project"
version = "0.1.0"
description = ""
authors = ["a92340a <a92340a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.6.1"
pyspark = "3.3.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
